GEN 1931 - Fix entity link accepted chars (#18391)